--- a/123/gogo.css
+++ b/123/gogo.css
@@ -178,3 +178,14 @@
   width: 30px;
   height: 30px;
 }
+.share {
+  margin: 10px;
+  padding: 0px 5px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: start;
+  background-color: beige;
+}
+.share:hover {
+  transform: rotateY('angle');
+}
