--- a/123/gogo.css
+++ b/123/gogo.css
@@ -86,13 +86,13 @@
   visibility: visible;
   transition-timing-function: ease;
   transition: 1s;
+  color: white;
 }
 
 .dont-hidden {
   width: 100%;
   height: 100%;
-  background-color: black;
-  opacity: 0.5;
+  background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
   left: 0;
@@ -102,6 +102,7 @@
   visibility: hidden;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
+  color: white;
 }
 
 .bros {
@@ -185,4 +186,9 @@
   display: flex;
   justify-content: start;
   background-color: beige;
+}
+.share:hover {
+  background-color: white;
+  padding: 8px 20px;
+  transition-duration: 1s;
 }
