--- a/123/gogo.css
+++ b/123/gogo.css
@@ -53,7 +53,7 @@
 }
 
 .gradient {
-  border-radius: 20px;
+  border-radius: 10px;
   background: linear-gradient(90deg, #f4f4f4, white 50%);
 }
 
@@ -79,16 +79,6 @@
 .dont:hover .dont-hidden {
   visibility: visible;
 }
-.gray {
-  color: white;
-}
-.gray:hover {
-  visibility: visible;
-  transition-timing-function: ease;
-  transition: 1s;
-  color: white;
-}
-
 .dont-hidden {
   width: 100%;
   height: 100%;
@@ -102,6 +92,15 @@
   visibility: hidden;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
+  color: white;
+}
+.gray {
+  color: white;
+}
+.gray:hover {
+  visibility: visible;
+  transition-timing-function: ease;
+  transition: 1s;
   color: white;
 }
 
@@ -197,35 +196,38 @@
   font-size: 13px;
 }
 .baruun4zurg {
-  height: 170px; 
-  width: 290px; 
+  height: 170px;
+  width: 290px;
   border-radius: 10px;
 }
 .niga {
-  font-size: 15px; 
+  font-size: 15px;
   margin: 5px 0px 0px 0px;
+  width: 263px;
+  height: 66px;
+  color: #d1d1d1;
 }
 .flexx {
   display: flex;
 }
 .teevrinzurg {
-  width: 210px; 
-  height: 150px; 
-  border-radius: 10px
+  width: 210px;
+  height: 150px;
+  border-radius: 10px;
 }
 .buttonss {
-  border-radius: 100%; 
-  height: 16px; 
-  width: 16px; 
-  background-color: #4389f0; 
+  border-radius: 100%;
+  height: 16px;
+  width: 16px;
+  background-color: #4389f0;
   color: black;
   margin: 0;
 }
 .hairtsag {
-  width: 575px; 
-  height: 75px; 
-  background-color: #4389f0; 
-  display: flex; 
+  width: 575px;
+  height: 75px;
+  background-color: #4389f0;
+  display: flex;
   padding: 15px 10px;
 }
 .usegnuud {
@@ -234,32 +236,342 @@
   margin: 0px 0px 0px 10px;
 }
 .ninja {
-  color: white; 
-  font-size: 12px; 
-  bottom: 0; 
-  right: 0; 
+  color: white;
+  font-size: 12px;
+  bottom: 0;
+  right: 0;
 }
 .hairtsag2 {
-  width: 575px; 
-  height: 53px; 
-  background-color: #4389f0; 
+  width: 575px;
+  height: 53px;
+  background-color: #4389f0;
   padding: 15px 10px;
   display: flex;
   justify-content: space-between;
   margin: 5px 0px;
 }
 .idk {
-  padding-left: 30px; 
-  height: 171px; 
-  width: 480px
+  padding-left: 30px;
+  height: 171px;
+  width: 480px;
 }
 .tsashuzh {
-  font-size: 16px; 
+  font-size: 16px;
   margin: 0;
 }
 .tsashuzh:hover {
   color: blue;
   transition: 1s;
   /* background-color: #949494; */
-}   
+}
+.nigg {
+  width: 340px;
+  height: 88px;
+  padding: 30px 50px;
+  margin: 30px 0px 0px 0px;
+  background-color: #fcfaf4;
+}
+.mrbig {
+  width: 340px;
+  height: 1326px;
+  background-color: #fcfaf4;
+  display: flex;
+  justify-content: center;
+}
+.mrbig2 {
+  width: 270px;
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+}
+.mrwho {
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  border-bottom: 1px dashed lightgray;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+.mrwho:hover {
+  transform: scale(1.1);
+  transition: 1s;
+  color: gray;
+}
+.mrnigga {
+  font-size: 46px;
+  color: red;
+  margin: 0px 15px 0px 0px;
+  top: 0;
+  left: 0;
+}
+.mrfont {
+  font-size: 14px;
+  margin: 0;
+  width: 230px;
+  height: 66px;
+}
+.lildid {
+  display: flex;
+  justify-content: start;
+  margin-top: 5px;
+}
+.lildid2 {
+  display: flex;
+  margin-right: 10px;
+}
+.lilfont {
+  font-size: 12px;
+  color: #888888;
+  margin: 0;
+}
+.zurg {
+  width: 1121px;
+}
+.yrts {
+  margin-top: 60px;
+  width: 1121px;
+  margin-bottom: 20px;
+}
+.yrts2 {
+  display: flex;
+  justify-content: start;
+}
+.mic {
+  height: 25px;
+  width: 20px;
+  margin-top: 3px;
+}
+.yrts3 {
+  font-size: 20px;
+  margin: 0;
+}
+.four {
+  width: 263px;
+  height: 243px;
+  margin-left: 20px;
+  border-radius: 10px;
+}
+.four2 {
+  width: 263px;
+  height: 243px;
+  margin-left: 20px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
 
+.gran-container {
+  overflow: hidden;
+  border-radius: 10px;
+  height: 500px;
+  width: 542px;
+}
+
+.gran-container:hover .gran {
+  transform: scale(1.1);
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.story1 {
+  color: white;
+  background-color: #00b0f4;
+  height: 30px;
+  font-size: 18px;
+  margin: 0;
+  padding: 1px 2px;
+  border-radius: 3px;
+  top: 0;
+  left: 0;
+}
+.story2 {
+  margin: 0px 10px 0px 0px;
+  font-size: 26px;
+}
+.story-container {
+  display: flex;
+  height: 25.5px;
+  margin-top: 30px;
+}
+.story-big {
+  width: 1100px;
+  margin: auto;
+}
+.cookie {
+  width: 260px;
+  height: 230px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.light {
+  height: 360px;
+  width: 260px;
+}
+.elec {
+  padding: 10px;
+  border: solid #f1f1f1;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.fnt {
+  font-size: 16px;
+  height: 72px;
+  margin: 0;
+  width: 242px;
+}
+.hyr {
+  margin-top: 10px;
+  padding-top: 5px;
+  border-top: solid #f7f7f7;
+  display: flex;
+  width: 241px;
+  height: 26px;
+}
+.lilfnt {
+  color: #888888;
+  font-size: 12px;
+  margin: 0;
+}
+.w1 {
+  display: flex;
+  width: 290px;
+  height: 30px;
+  margin-bottom: 50px;
+}
+.w2 {
+  height: 20px;
+  width: 290px;
+  color: #888888;
+  font-size: 12px;
+  display: flex;
+  margin: 4px 0px 5px 0px;
+}
+.yagami {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+.q1 {
+  margin: 30px 0px 20px 0px;
+  height: 24px;
+  display: flex;
+}
+.com {
+  height: 23px;
+  width: 25px;
+  margin-right: 15px;
+}
+.q2 {
+  font-size: 20px;
+  margin: 0px;
+}
+.b95 {
+  width: 260px;
+  height: 170px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.frog {
+  height: 25px;
+  width: 27px;
+  margin-right: 15px;
+}
+.light2 {
+  height: 360px;
+  width: 520px;
+}
+.dob2 {
+  width: 520px;
+  height: 200px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.fnt2 {
+  font-size: 16px;
+  height: 72px;
+  margin: 0;
+  width: 520px;
+}
+.yes {
+  margin-top: 60px;
+  padding-top: 50px;
+  background-color: #1a1a1a;
+}
+.mrbig3 {
+  width: 270px;
+  display: flex;
+  justify-content: start;
+}
+.kids4 {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 50px;
+}
+.last {
+  display: flex;
+  justify-content: center;
+  width: 1100px;
+  height: 147px;
+  margin-top: 50px;
+}
+.gogoimg {
+  width: 120px;
+  height: 40px;
+}
+.v1 {
+  display: flex;
+  justify-content: center;
+}
+.v2 {
+  width: 1100px;
+  height: 147px;
+  margin: 50px 0px 50px 0px;
+}
+.v3 {
+  display: flex;
+  justify-content: space-between;
+  width: 1100px;
+}
+.v4 {
+  display: flex;
+  width: fit-content;
+  height: 22px;
+  margin: 0px 0px 10px 30px;
+  justify-content: end;
+}
+.v5 {
+  width: 15px;
+  height: 20px;
+  margin-right: 10px;
+}
+.v6 {
+  font-size: 15px;
+  margin: 0;
+  width: fit-content;
+}
+.o1 {
+  width: 1100px;
+  height: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.o2 {
+  background-color: #f2f2f2;
+  height: 1px;
+  width: 1100px;
+}
+.o3 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: end;
+}
+.o4 {
+  width: 950px;
+  display: flex;
+  justify-content: end;
+  height: 22px;
+  margin-bottom: 7px;
+}
+.o5 {
+  margin-right: 10px;
+  color: #cccccc;
+}
