--- a/123/gogo.css
+++ b/123/gogo.css
@@ -14,9 +14,10 @@
   font-family: Helvetica, Arial, sans-serif;
   background: rgb(255, 255, 255);
   background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 1) 47%,
-    rgba(237, 239, 239, 1) 100%
+    360deg,
+    rgba(247, 247, 247, 1) 0%,
+    rgba(255, 255, 255, 1) 57%,
+    rgba(255, 255, 255, 1) 100%
   );
 }
 
@@ -54,13 +55,13 @@
 
 .gradient {
   border-radius: 10px;
-  background: linear-gradient(90deg, #f4f4f4, white 50%);
+  background: linear-gradient(90deg, rgba(244,244,244,1) 0%, rgba(255,255,255,1) 57%, rgba(255,255,255,1) 100%);;
 }
 
 .dont {
   height: 385px;
   width: 50%;
-  border-radius: 20px;
+  border-radius: 5px;
   margin-left: 0;
   overflow: hidden;
   position: relative;
@@ -73,26 +74,26 @@
   transition-timing-function: ease-in-out;
 }
 .dont:hover img {
-  transform: scale(1.1);
-  margin: 0;
-}
-.dont:hover .dont-hidden {
-  visibility: visible;
+  transform: scale(1.07);
 }
 .dont-hidden {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: #4389f0; */
   position: absolute;
   top: 0;
   left: 0;
+  visibility: visible;
   display: flex;
   justify-content: center;
   align-items: center;
-  visibility: hidden;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
   color: white;
+}
+.dont:hover .dont-hidden {
+  visibility: visible;
 }
 .gray {
   color: white;
@@ -117,11 +118,12 @@
 }
 
 .gerle {
-  height: 150px;
+  height: fit-content;
   width: 100%;
   margin-bottom: 10px;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 }
 
 .gerle img {
@@ -131,8 +133,26 @@
   transition-timing-function: ease-in-out;
 }
 
-.gerle img:hover {
-  transform: scale(1.2);
+.gerle:hover img {
+  transform: scale(1.05);
+}
+.gerle-hidden {
+  width: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+  color: white;
+}
+.gerle:hover .gerle-hidden {
+  visibility: hidden;
 }
 
 .emoji {
@@ -187,8 +207,8 @@
   background-color: beige;
 }
 .share:hover {
-  background-color: white;
-  padding: 8px 20px;
+  background-color: yellow;
+  padding: 0px 15px;
   transition-duration: 1s;
 }
 .onsar {
@@ -197,8 +217,8 @@
 }
 .baruun4zurg {
   height: 170px;
-  width: 290px;
-  border-radius: 10px;
+  width: 263px;
+  border-radius: 5px;
 }
 .niga {
   font-size: 15px;
@@ -439,7 +459,7 @@
 }
 .w2 {
   height: 20px;
-  width: 290px;
+  width: 263px;
   color: #888888;
   font-size: 12px;
   display: flex;
@@ -503,8 +523,9 @@
 }
 .kids4 {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   padding-bottom: 50px;
+  width: 1100px;
 }
 .last {
   display: flex;
