--- a/123/gogo.css
+++ b/123/gogo.css
@@ -55,7 +55,12 @@
 
 .gradient {
   border-radius: 10px;
-  background: linear-gradient(90deg, rgba(244,244,244,1) 0%, rgba(255,255,255,1) 57%, rgba(255,255,255,1) 100%);;
+  background: linear-gradient(
+    90deg,
+    rgba(244, 244, 244, 1) 0%,
+    rgba(255, 255, 255, 1) 57%,
+    rgba(255, 255, 255, 1) 100%
+  );
 }
 
 .dont {
@@ -80,11 +85,10 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  /* background-color: #4389f0; */
   position: absolute;
   top: 0;
   left: 0;
-  visibility: visible;
+  visibility: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -106,7 +110,7 @@
 }
 
 .bros {
-  margin: 5px 0px 0%;
+  margin: 0;
   height: 25px;
   width: 25px;
 }
@@ -122,6 +126,7 @@
   width: 100%;
   margin-bottom: 10px;
   border-radius: 10px;
+  margin-left: 0px;
   overflow: hidden;
   position: relative;
 }
@@ -134,11 +139,11 @@
 }
 
 .gerle:hover img {
-  transform: scale(1.05);
+  transform: scale(1.07);
 }
 .gerle-hidden {
   width: 100%;
-  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
@@ -152,7 +157,7 @@
   color: white;
 }
 .gerle:hover .gerle-hidden {
-  visibility: hidden;
+  visibility: visible;
 }
 
 .emoji {
@@ -163,28 +168,49 @@
 .zurgnuud {
   width: 170.8px;
   height: 235px;
-  border-radius: 15px;
+  border-radius: 10px;
   overflow: hidden;
   position: relative;
 }
 
-.zurgnuud .background-image {
+.zurgnuud img {
   width: 100%;
   transition-property: all;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
 }
 
-.zurgnuud:hover .background-image {
-  transform: scale(1.3);
-  margin: 0;
+.zurgnuud:hover img {
+  transform: scale(1.07);
 }
-.zurgnuudG {
+.zurgnuud-hidden {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
   left: 0;
-  padding: 10px;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+  color: white;
 }
+.zurgnuud:hover .zurgnuud-hidden {
+  visibility: visible;
+}
+.gray2 {
+  color: white;
+}
+.gray2:hover {
+  visibility: visible;
+  transition-timing-function: ease;
+  transition: 1s;
+  color: white;
+}
+
 .obsolute {
   position: absolute;
 }
@@ -595,4 +621,77 @@
 .o5 {
   margin-right: 10px;
   color: #cccccc;
+}
+.big3 {
+  display: flex;
+  gap: 20px;
+  margin-top: 50px;
+  border-radius: 10px;
+}
+.g1 {
+  display: flex;
+  justify-content: start;
+}
+.g2 {
+  display: flex;
+  margin-right: 20px;
+}
+.g3 {
+  color: black;
+  font-size: 14px;
+  margin: 0;
+}
+.some {
+  height: 300px;
+  width: 100%;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+.blue {
+  font-size: 22px;
+  margin: 0px 0px 5px;
+  color: #407ce8;
+  margin-right: 5px;
+}
+.zurgnuudG {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+.zurg6 {
+  display: flex;
+  justify-content: space-between;
+}
+.zurg66 {
+  text-align: center;
+  margin: auto;
+  margin-top: 30px;
+}
+
+.grnf {
+  height: 385px;
+  display: flex;
+  justify-content: space-around;
+  background-color: white;
+  border-radius: 10px;
+}
+.gg {
+  height: 39px;
+  width: 119px;
+  margin: 0;
+}
+.gl {
+  display: flex;
+  margin-left: 10px;
+}
+@media (max-width: 960px) {
+  #grad1 {
+    display: none;
+  }
+  .big3 {
+    display: none;
+  }
+  .gl {
+    display: none;
+  }
 }
